// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Label /> > it handles transparent prop`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-k3pvii-MuiTypography-root"
  >
    hello
  </p>
</DocumentFragment>
`;

exports[`<Label /> > it handles transparent prop 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-io8o49-MuiTypography-root"
  >
    hello
  </p>
</DocumentFragment>
`;

exports[`<Label /> > it matches the snapshot 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-io8o49-MuiTypography-root"
  >
    hello
  </p>
</DocumentFragment>
`;
